    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/video_item_view"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:background="#eeeeee"
            >
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_textview"
                    android:text="@string/fake_date_text"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="4dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pageviews_textview"
                    android:text="@string/fake_number_of_views_text"
                    android:gravity="right"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingRight="4dp"
                    />
            </TableRow>
        </TableLayout>
        <VideoView
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/video_item_height"
            android:id="@+id/videoView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            />
        <ImageView
            android:id="@+id/my_fake_video"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/video_item_height"
            android:src="@drawable/fake_video"/>
        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_description_bar"
                android:shrinkColumns="1"
                >
                <TableRow>
                    <ImageView
                        android:layout_height="60dp"
                        android:layout_width="60dp"
                        android:id="@+id/user_avatar_imageview"
                        android:src="@drawable/user_avatar"
                        />
                    <LinearLayout
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:orientation="vertical" >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:id="@+id/video_title_textview"
                            android:text="@string/video_title_text"
                            android:textSize="17sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/description_textview"
                            android:text="@string/video_desc_text"
                            />
                    </LinearLayout>
                    <TextView
                        style="@style/votes_text_style"
                        android:text="@string/number_of_votes"
                        />
                </TableRow>
            </TableLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <Button
                    android:id="@+id/video_comment_button"
                    android:layout_centerInParent="true"
                    style="@style/comment_button_style"
                    />
                <Button
                    android:text="@string/vote"
                    android:gravity="center"
                    style="@style/typical_button_style"
                    android:layout_toLeftOf="@id/video_comment_button"
                    />
                <Button
                    android:text="@string/share"
                    android:gravity="center"
                    style="@style/typical_button_style"
                    android:layout_toRightOf="@id/video_comment_button"
                    />
            </RelativeLayout>
    </LinearLayout>
